tests/bad/inheritance/not_type.oc
/// fail: Unexpected token in parse_type: IntLiteral

struct Foo : 45 {
    
}